Only one chapter to go! Can't believe I started writing full speed late February and I'm almost done now. Boy time flies when you're not sleeping.

--- a/0_frontmatter/acknowledgement.tex
+++ b/0_frontmatter/acknowledgement.tex
@@ -5,13 +5,14 @@
 %\begin{acknowledgements}      %this creates the heading for the acknowlegments
 %
 %%
-%Según la Real Academia Española, serendipia es \textit{la circunstancia de encontrar por casualidad algo que no se buscaba}. Esta tesis es un resultado de la serendipia, de una suerte que me encontró cuando menos me lo esperaba. Cuando Emilio me ofreció unirme al Ontology Engineering Group como parte de un pequeño proyecto, lo último que esperaba es que tras ese pequeño proyecto se escondía la mayor aventura de mi vida, tanto a nivel profesional como personal. Y, como en toda buena aventura, no hubiera podido llegar nunca hasta aquí sin la ayuda de tantísimas personas que han estado a mi lado.
+%Según la Real Academia Española, serendipia es \textit{la circunstancia de encontrar por casualidad algo que no se buscaba}. Esta tesis es un resultado de la serendipia, de una suerte que me encontró cuando menos me lo esperaba, y quizás cuando más la necesitaba. Cuando Emilio me ofreció unirme al Ontology Engineering Group como parte de un pequeño proyecto, lo último que esperaba es que tras ese pequeño proyecto se escondía la mayor aventura de mi vida, tanto a nivel profesional como personal. Y, como en toda buena aventura, no hubiera podido llegar al final sin la ayuda de tantísimas personas que han estado a mi lado.
 
 %El mayor de mis agradecimientos es sin duda para mis directores: Emilio y Daniel. Si ya fue un privilegio teneros como profesores, teneros como directores ha sido un verdadero regalo. Gracias por haberme llevado bajo vuestro ala, por guiarme siempre con tanto cariño en este largo (y a veces tortuoso) camino que es la investigación y por haberme enseñado tantísimo. 
 
-%Gracias por supuesto a mis compañeros del Ontology Engineering Group. A los postdocs: Asun, Óscar, Raúl García, Elena, Víctor, Mariano Rico, Mariano Fernández y Edna. Muy especialmente, gracias a María Poveda. Parece increíble que unos zapatos tan pequeños puedan dejar unas huellas tan grandes. Qué afortunada soy y qué afortunados los y las que vengan de tener en ti un espejo donde mirarse. Ojalá la suerte me deje seguir aprendiendo contigo mucho tiempo. Muchas gracias también a Dani Garijo, que llegó tarde pero a tiempo. Sin tus incisivas preguntas y tus valiosos consejos
+%Gracias por supuesto a mis compañeros del Ontology Engineering Group, por acogerme con los brazos abiertos y darme un segundo hogar. A los postdocs, por regalarme tantos buenos consejos: Asun, Óscar, Raúl García, Elena, Víctor, Mariano Rico, Javi Bajo, Mariano Fernández y Edna. Muy especialmente, gracias a María Poveda. Parece increíble que unos zapatos tan pequeños puedan dejar unas huellas tan grandes allá por donde pasas. Qué afortunada soy y qué afortunados los y las que vengan de tener en ti un referente. Ojalá la suerte me deje seguir aprendiendo de ti (y contigo, sobretodo contigo) mucho tiempo. Muchas gracias también a Dani Garijo, que llegó tarde pero a tiempo. Gracias por tus incisivas preguntas, esas que agitan el avispero y te hacen ver las cosas desde una perspectiva completamente distinta, y por ofrecerme siempre tu inestimable ayuda.  Gracias también a los héroes en la sombra que hacen que todo funcione: Raúl Alcázar, Miguel Ángel, Ana Ibarrola, JARG y Paco. 
 
-%Gracias también a mis compañeros a los que tuve la suerte de ver cruzar el puente y convertirse en doctores: Julia, Álvaro, Alba, Paola, María Navas, David, y Carlos. Gracias especialmente a Pablo, por aguantar mi incesante verborrea y compartir conmigo tanto de tu tiempo, tus buenos consejos y, especialmente, tu gran sentido del humor. Gracias a mis compañeros predocs: Serge, Ana, Iker, Juan Cano, Julián e Isam. Especialmente, gracias a Patri, por ser mi compañera en este increíble viaje. Qué orgullosa estoy de ti y de todo lo que has conseguido.  
+
+%Gracias también a mis compañeros a los que tuve la suerte de ver cruzar el puente y convertirse en doctores: Julia, Álvaro, Andrea, Alba, Paola, María Navas, David, y Carlos. Gracias sobretodo a Pablo, por aguantar mi incesante verborrea y compartir conmigo tanto de tu tiempo, tus buenos consejos y, especialmente, tu gran sentido del humor. Gracias a mis compañeros predocs, con los que tanto tiempo he compartido en el  laboratorio (y a veces fuera de él): Serge, Ana, Iker, Juan Cano, Julián e Isam. Especialmente, gracias a Patri, por ser mi compañera en este increíble viaje.  
 
 
 
@@ -20,25 +21,18 @@
 %%A SARA Y A LA GENTE DE ÁMSTERDAM
 %Sara, gracias por tu generosidad, y por haber sido mi hogar lejos de casa. 
 
-%%A LA GENTE DEL LABO QUE NO ESTÁ, LAS CHICAS DE LA PISCINA DE TERUEL
-%% 
-%%A LOS AMIGOS QUE HICISTE, A LOS QUE RECUPERASTE
-%%
+%Gracias también a mis amigos: los que estaban, los que volvieron, y los que se quedaron. Sin vuestro apoyo, especialmente en esta última etapa, nada de esto hubiera sido posible. Hay un trocito de vosotros en cada una de estas páginas. Quisiera destacar la ayuda de Jaime, que lleva más de una década ayudándome a desentrañar los intrincados misterios de la ciencia, convirtiendo cualquier problema complejo en sencillos garabatos. Muchas gracias también a Isma, que lleva acompañándome en este periplo de la universidad (y de la vida) desde el primer día que llegué aquí. Gracias por hacerme reír siempre con tus historias, por tu compañía en las buenas y tu apoyo incondicional en las malas y, sobretodo, por ser la maravillosa persona que eres.
+
+%Finalmente, y muy especialmente, gracias a Tamara por ser la hermana que la vida me regaló. Gracias por ser como eres, por estar de forma incondicional, por tu infinita generosidad y por darme una segunda familia y unos amigos increíbles. Gracias por tirar de mí cuando las fuerzas me faltan, pero también por tirarme de las orejas cuando hace falta. Me has dado tanto que una vida va a ser corta para agradecértelo. 
 
 
-%Gracias también a mis amigos: los que están, los que volvieron, y los que se quedaron. Sin vuestro apoyo (especialmente en esta última etapa) nada de esto sería posible. Hay un trocito de vosotros en cada una de estas páginas. Quisiera destacar la ayuda de Jaime, que lleva más de una década ayudándome a desentrañar los intrincados misterios que esconden las matemáticas, convirtiendo cualquier problema complejo en sencillos garabatos. Sin ti, esta tesis nunca hubiera sido posible. Muchas gracias también a Isma, que lleva acompañándome en este periplo de la universidad (y de la vida) desde el primer día que llegué aquí. Gracias por tus miles de historias, por tu infinito apoyo en las malas y en las peores y, en definitiva, por ser la gran persona que eres.
+%Gracias a mi familia, a toda ella: a los Amadores, a los Domínguez y a los Torrijos. Especialmente, gracias a mi prima Irene, por abrirme las puertas de este mundo y por ser un referente para mí tanto en lo profesional como en lo personal. No hubiera podido andar mi camino sin seguir tus pasos. Por supuesto, gracias a mi tío (y lo más importante, padrino) Juan y a mi tía Mariu, por cuidarme, mimarme y animarme siempre. También a mis hermanos, Javi y Jorge, por hacerme reír siempre en los momentos fáciles y, sobretodo, en los difíciles. Da igual cuánto crezcáis, siempre vais a ser mis pequeños. 
 
-%Finalmente, y muy especialmente, gracias a Tamara por ser la hermana que la vida me regaló. Gracias por ser, por estar de forma incondicional, por tu infinita generosidad y por darme una segunda familia y unos amigos maravillosos. Me has dado tanto que una vida va a ser corta para agradecértelo. 
-
-
-%Gracias a mi familia, a toda ella: a los Amadores, a los Domínguez y a los Torrijos. Especialmente, gracias a mi prima Irene, por abrirme las puertas de este mundo y por ser un referente para mí tanto en lo profesional como en lo personal. No hubiera podido emprender mi camino sin seguir tus pasos. A mi tío (y lo más importante, mi padrino) Juan y a mi tía Mariu, por cuidarme, mimarme y animarme siempre. También a mis hermanos, Javi y Jorge, que para mí siempre serán mis pequeños por mucho que crezcan.
-
-
-%Sobretodo quiero darle las gracias las dos mujeres que han hecho de mí la persona que soy hoy, de las que tanto he aprendido, y de las que seguiré aprendiendo toda la vida. En primer lugar, gracias a mi abuela, a mi Geni, por cuidarme todos estos años y por apoyarme siempre incondicionalmente, aún sin saber exactamente en qué. De ti aprendí lo importante que es la generosidad, y que el amor que das a la gente, siempre lo recibes de vuelta. 
+%Sobretodo quiero darle las gracias las dos mujeres que me han hecho la persona que soy, de las que tanto he aprendido, y de las que seguiré aprendiendo toda la vida. En primer lugar, gracias a mi abuela, a mi Geni, por cuidarme tantos años y por apoyarme siempre incondicionalmente, aún sin saber exactamente en qué. De ti aprendí lo importante que es la generosidad, y que el amor que das a la gente, siempre lo recibes de vuelta. 
 
 %Especialmente gracias a mi madre, Geles. Gracias por enseñarme que el humor a veces es lo único que nos ayuda a enfrentarnos a la vida y por seguir (y sacarnos) siempre adelante, por difícil que sea. Siempre dices que tener un hijo significa llevarte cien disgustos por cada orgullo que recibes. Espero que este orgullo compense todos los disgustos que te haya dado (y los que seguro te seguiré dando). 
 
-%Por último, gracias a mi estrella, cuya presencia y ausencia siempre me acompañan. A mi padre Alberto, que además de dejarme su nariz y su amor por la música, me enseñó que relativizar los problemas es el primer paso para resolverlos, y que la vida es un viaje que hay que disfrutar. Qué largo es el camino sin ti, y cuánto me hubiera gustado poder seguir recorriéndolo contigo cerca. Allí donde me estés esperando, ojalá estés orgulloso. 
+%Por último, gracias a mi estrella, cuya presencia y ausencia siempre me acompañan. A mi padre, Alberto, que además de dejarme su nariz y su amor por la música me enseñó que relativizar los problemas es el primer paso para resolverlos, y que la vida es un viaje que hay que disfrutar. Qué largo es el camino sin ti, y cuánto me hubiera gustado poder seguir caminándolo contigo cerca. Como a veces me cantabas: ``toda una vida me estaría contigo, no me importa en qué forma, ni dónde ni cómo; pero junto a ti''. Allí donde me estés esperando, ojalá estés orgulloso. 
 
 %Me gustaría añadir los versos de la canción de Xoel López "Lodo", porque la he escuchado durante el proceso de escritura bastante y es como un buen recordatorio de que esto es el final del camino y de que es una etapa que abre las puertas de algo nuevo y bonito
 % 
