--- a/1_introduction/introduction.tex
+++ b/1_introduction/introduction.tex
@@ -1,8 +1,8 @@
 \chapter{Introduction}
 \label{chap:intro}
-
-TBD
 %%Contexto
 %%Motivacion
 %%Objetivo general (1p)
 %%Estructura
+\section{Thesis Structure}
+
